<resources>
    <string name="app_name">Ayo Bersama</string>
    <string name="appwidget_text">Cegah Penyakit</string>
    <string name="add_widget">Add widget</string>

    <string name="positif">Positif</string>
    <string name="indo">Widget Indonesia</string>
    <string name="gorontalo">Widget Gorontalo</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="aktfikan_widget_di_home_screen_handphone">Aktifkan Widget di Home Screen Handphone</string>
    <string name="positif_corona">Positif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="update_kasus_corona">Update Kasus Corona</string>
    <string name="update_kasus_corona_gorontalo">Update kasus corona di Provinsi Gorontalo</string>
    <string name="odp">ODP</string>
    <string name="pdp">PDP</string>
    <string name="check_up_jatim_covid_19">Check Up Jatim covid-19</string>

    <string name="notification_channel_id">
        your.custom.id
    </string>
    <string name="notification_channel_name">
        Your custom notification channel name
    </string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">BATALKAN</string>
    <string name="message_user_unauthorized">Anda telah login pada device lain</string>
    <string name="msg_unexpected_error">Permintaan tidak dapat diproses, Silahkan coba lagi nanti</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmed_case_count">Dikonfirmasi : %1$s</string>
    <string name="recovered_case_count">Pulih : %1$s</string>
    <string name="death_case_count">Meninggal : %1$s</string>
    <string name="information_last_update">Terakhir diperbarui %1$s</string>
    <string name="information_location_total_case"> "Total %1$s kejadian di Cina dan %2$s di lokasi lainnya"</string>
    <string name="visitable_recycler_adapter_unregistered_message">
        File %1$s.xml tidak terdaftar pada VisitableRecyclerAdapter!
    </string>
    <string name="type_city_province_region">Masukkan negara atau provinsi daerah</string>
    <string name="case_reported">Kejadian dilaporkan</string>
    <string name="tap_on_statistic">Klik Info Aktif, Pulih dan Meninggal untuk melihat data pada map </string>
    <string name="total_case">Total Kasus</string>
    <string name="active">Aktif</string>
    <string name="confirmed">Dikonfirmasi</string>
    <string name="recovered">Pulih</string>
    <string name="deaths">Meninggal</string>
    <string name="covid19">COVID19</string>
    <string name="general_error_title">Woots!</string>
    <string name="general_error_description">Terjadi kesalahan</string>
    <string name="connection_error_title">Tidak dapat terhubung dengan internet</string>
    <string name="connection_error_description">Kemungkinan terjadi kesalahan pada jaringan anda</string>
    <string name="retry">Ulangi</string>
    <string name="zero">0</string>
    <string name="daily_updates">Update Harian</string>
    <string-array name="detail_item_menu">
        <item>Sematkan ke Dasbor</item>
    </string-array>
    <string name="feedback">Umpan Balik</string>
    <string name="show_graph"></string>
    <string name="pinch_zoom">Cubit untuk memperbesar atau memperkecil data</string>

    <!--   // <string name="per_country">Data Per Negara</string>-->
    <string name="source">Sumber : %1$s</string>
    <string name="case_per_province_chart">Grafik kasus per provinsi</string>
    <string name="case_daily_chart">Grafik kasus per hari</string>
    <string name="case_daily">Kasus harian</string>
    <string name="indonesia_daily_info">Kasus konfirmasi, pulih dan kematian adalah nilai akumulatif</string>
    <string name="new_case">Kasus Baru</string>
    <string name="new_case_case_count">Kasus Baru : %1$s</string>
    <string name="check_update">Update aplikasi</string>
    <string name="day_on">(Hari ke-%1$s)</string>

    <string name="country_indonesia">Indonesia</string>
    <string name="unpin">Hapus pin</string>
    <string name="pinned_not_set">Lokasi yang di-pin belum di set</string>
    <string name="how_to_pin">Buka map, tekan dan tahan pada negara yang dipilih</string>
    <string name="source_data">Sumber data : https://covid19.mathdro.id/</string>
    <string name="update_widget_start">Memperbaharui data widget …</string>
    <string name="update_widget_success">Pembaharuan data widget berhasil</string>
    <string name="update_widget_fail">Pembaharuan data widget gagal</string>
    <string name="show_data">Lihat data</string>
    <string name="total_chart_info">Total Line Chart menunjukkan jumlah total kasus terkonfirmasi dan pulih di kurun waktu yang ditentukan</string>
    <string name="delta_chart_info">Delta Line Chart menunjukkan peningkatan jumlah kasus terkonfirmasi dan pulih di kurun waktu yang ditentukan</string>
    <string name="total">Total</string>
    <string name="delta">Delta</string>
    <string name="update_url">u</string>
    <string name="feedback_url">feddbac</string>
    <string name="lihat_semua">Lihat Semua</string>

    <string name="pref_key_notification" translatable="false">pref_key_notification</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Dapatkan Notif Setiap Hari.</string>
    <string name="pref_key_answers" translatable="false">pref_key_answers</string>
    <string name="selamat_datang_silahkan_mengisi_nama_panggilan_atau_nama_lengkap">Selamat Datang, silahkan mengisi nama panggilan atau nama lengkap dan Lokasi Anda</string>

</resources>
