<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center_horizontal"
        android:text="Info COVID-19 Di Indonesia"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center_horizontal"
        android:text="Info COVID-19 Di Indonesia"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_small">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="#f82649"
            android:backgroundTint="#f82649"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appwidget_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:gravity="center_horizontal"
                android:text="@string/positif"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_16"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/positif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:gravity="center_horizontal"
                android:text="323"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="#09ad95"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:gravity="center_horizontal"
                android:text="@string/sembuh"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_16"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/sembuh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:gravity="center_horizontal"
                android:text="..."
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="#f9a825"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:gravity="center_horizontal"
                android:text="@string/meninggal"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_16"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/meninggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:text="..."
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center_horizontal"
        android:text="#DiRumahAja"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />


</LinearLayout>